# orbiter-1

./: CMakeLists.txt  Complete_5.colored_graph  README.md  makefile  makefile~
DOC/: algorithm.tex  algorithm.tex~  appendix.tex  appendix.tex~  blt.tex  blt.tex~  blt2.tex  classification_problems.tex  classifying.tex~  contributions.tex~  determine_conic.tex  examples.tex  examples.tex~  finite_fields.tex  frontmatter.tex  frontmatter.tex~  g.aux  getting_started.tex  getting_started.tex~  graphs.tex  graphs.tex~  grassmann.tex  grassmann.tex~  hyperoval2.tex  hyperovals.tex  hyperovals.tex~  induction.tex  installation.tex  installation.tex~  introduction.tex~  johnson.tex  johnson.tex~  modeling.tex  modeling.tex~  orbiter.aux  orbiter.bbl  orbiter.bib  orbiter.bib~  orbiter.blg  orbiter.tex~  (+13 more)
DOC/CODE/: all_k_subsets.tex  all_k_subsets_5_2_tree.tex  determine_conic.tex  determine_conic_out.tex  finite_field.tex  finite_field1.tex  finite_field_out.tex  finite_field_out1.tex  grassmann.tex  grassmann_out.tex  johnson.tex  johnson_out.tex  list_of_directories.tex  list_of_files.tex  list_of_files.tex~  makefile  makefile~  paley.tex  paley_out.tex  projective_space.tex  projective_space2.tex  projective_space2_out.tex  projective_space_out.tex  puzzle.tex  puzzle25_compressed.tex  puzzle_out.tex  puzzle_out.tex~  puzzle_out_edited.tex  puzzle_out_edited.tex~  sarnak.tex  sarnak_out.tex  schlaefli.tex  schlaefli_out.tex  sol25.tex  winnie_li.tex  winnie_li_out.tex  ~dlx.tex
DOC/GRAPHICS/: Hamming.tex  Hamming.tex~  Johnson_5_2_0_on_circle.tex  Johnson_5_2_0_on_circle.tex~  Johnson_7_3_1_on_circle.tex  Johnson_7_3_1_on_circle.tex~  Monomial_8_2_poset_lvl_4.tex  Monomial_8_2_poset_lvl_4.tex~  Paley_graph_13_on_circle.tex  Paley_graph_13_on_circle.tex~  WL_16_2.tex  WL_16_2.tex~  WL_25_2.tex~  X_29_5.tex  X_29_5.tex~  X_29_5_one.tex  X_29_5_one.tex~  all_k_subsets_5_2.tex  all_k_subsets_5_2.tex~  all_k_subsets_7_3.tex  all_k_subsets_7_3.tex~  graph_4_poset_full_lvl_6.tex  graph_4_poset_full_lvl_6.tex~  graph_4_poset_lvl_6.tex  graph_4_poset_lvl_6.tex~  graph_6_r2_poset_lvl_6.tex  graph_6_r2_poset_lvl_6.tex~  graph_6_r2_tree_lvl_6.tex  graph_6_r2_tree_lvl_6.tex~  graph_6_r3_poset_lvl_9.tex  graph_6_r3_poset_lvl_9.tex~  graph_6_r3_tree_lvl_9.tex  graph_6_r3_tree_lvl_9.tex~  grassman_graph_4_2_2_3_on_circle.tex~  grassmann_graph_4_2_2_3_on_circle.tex  grassmann_graph_4_2_2_3_on_circle.tex~  puzzle25_search.tex  schlaefli_4_on_circle.tex  schlaefli_4_on_circle.tex~
RUN/: makefile  makefile~
RUN/ARC/19/: makefile  makefile~
RUN/AWSS/: makefile  makefile~
RUN/BLT/: makefile
RUN/BLT/13/: makefile  makefile~
RUN/CODES/: makefile
RUN/CODES/2/: makefile  makefile~
RUN/CODES/4/: makefile
RUN/GRAPH/: makefile  makefile~
RUN/GRAPH/CUBIC6/: makefile
RUN/GRAPH/G4/: a  makefile  makefile~
RUN/GRAPH/G5/: a  makefile~
RUN/GRAPH/PETERSEN/: makefile
RUN/GRAPH/T4/: makefile~
RUN/HYPEROVAL/: makefile  makefile~
RUN/HYPEROVAL/16/: makefile  makefile~
RUN/HYPEROVAL/32/: makefile  makefile~
SRC/: makefile
SRC/APPS/: makefile  makefile~
SRC/APPS/ARCS/: arc_generator.C  arcs.h  arcs_main.C  makefile  test_hyperoval.C
SRC/APPS/BLT/: blt.h  blt_main.C  blt_set.C  blt_set2.C  makefile
SRC/APPS/CODES/: code_generator.C  codes.C  codes.h  makefile
SRC/APPS/COMBINATORICS/: all_k_subsets.C  all_k_subsets.out  alphabet.C  alphabet.out  alphabet2.C  alphabet2.out  burnside.C  burnside.out  cayley.C  cayley.out  cayley_sym_n.C  cayley_sym_n.out  change_1_dollar.C  change_1_dollar.out  complete_graph.C  complete_graph.out  conic.C  conjugacy_classes_sym_n.C  conjugacy_classes_sym_n.out  design.C  design.out  fibonacci.C  fibonacci.out  field.C  grassmann.C  grassmann.out  group_ring.C  group_ring.out  had.C  hadamard.C  hamming.C  johnson.C  johnson.out  johnson_table.C  johnson_table.out  lehmer.c  lehmer.out  log  makefile  matrix_rank.C  (+38 more)
SRC/APPS/GRAPH/: graph.C  graph.h  graph_9_r4_er1_1.data  graph_9_r4_er1_10.data  graph_9_r4_er1_11.data  graph_9_r4_er1_12.data  graph_9_r4_er1_2.data  graph_9_r4_er1_3.data  graph_9_r4_er1_4.data  graph_9_r4_er1_5.data  graph_9_r4_er1_6.data  graph_9_r4_er1_7.data  graph_9_r4_er1_8.data  graph_9_r4_er1_9.data  graph_9_r4_er1_lvl_1  graph_9_r4_er1_lvl_10  graph_9_r4_er1_lvl_11  graph_9_r4_er1_lvl_12  graph_9_r4_er1_lvl_13  graph_9_r4_er1_lvl_14  graph_9_r4_er1_lvl_15  graph_9_r4_er1_lvl_16  graph_9_r4_er1_lvl_17  graph_9_r4_er1_lvl_18  graph_9_r4_er1_lvl_2  graph_9_r4_er1_lvl_3  graph_9_r4_er1_lvl_4  graph_9_r4_er1_lvl_5  graph_9_r4_er1_lvl_6  graph_9_r4_er1_lvl_7  graph_9_r4_er1_lvl_8  graph_9_r4_er1_lvl_9  graph_9_r4_er1a_lvl_1.data  graph_9_r4_er1a_lvl_10.data  graph_9_r4_er1a_lvl_11.data  graph_9_r4_er1a_lvl_12.data  graph_9_r4_er1a_lvl_13.data  graph_9_r4_er1a_lvl_14.data  graph_9_r4_er1a_lvl_15.data  graph_9_r4_er1a_lvl_16.data  (+51 more)
SRC/APPS/REGULAR_LS/: makefile  regular_ls.C  regular_ls.h  regular_ls_generator.C  transpose.C
SRC/APPS/TOOLS/: all_cliques.C  all_cycles.C  all_rainbow_cliques.C  dlx.C  draw_colored_graph.C  layered_graph_main.C  layered_graph_main.out  makefile  plot_decomposition_matrix.C  scheduler.C  solve_diophant.C  treedraw.C  treedraw.out
SRC/APPS/TRANSLATION_PLANE/: extending.C  makefile  translation_plane.h  translation_plane_main.C
SRC/LIB/: makefile  makefile~  orbiter.h
SRC/LIB/ACTION/: action.C  action.h  action_by_conjugation.C  action_by_representation.C  action_by_restriction.C  action_by_right_multiplication.C  action_by_subfield_structure.C  action_cb.C  action_global.C  action_global.C~  action_induce.C  action_init.C  action_on_andre.C  action_on_bricks.C  action_on_cosets.C  action_on_determinant.C  action_on_factor_space.C  action_on_grassmannian.C  action_on_k_subsets.C  action_on_orthogonal.C  action_on_sets.C  action_on_spread_set.C  action_on_wedge_product.C  backtrack.C  desarguesian_spread.C  group.C  interface.C  interface_matrix_group.C  interface_perm_group.C  linear_group.C  linear_group_description.C  makefile  matrix_group.C  page_storage.C  perm_group.C  product_action.C  (+11 more)
(+178 files in other folders)
