cmake_minimum_required(VERSION 3.6)
project(ORBITER)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    DOC/CODE/all_k_subsets.tex
    DOC/CODE/all_k_subsets_5_2_tree.tex
    DOC/CODE/determine_conic.tex
    DOC/CODE/determine_conic_out.tex
    DOC/CODE/dlx.tex
    DOC/CODE/finite_field.tex
    DOC/CODE/finite_field1.tex
    DOC/CODE/finite_field_out.tex
    DOC/CODE/finite_field_out1.tex
    DOC/CODE/finite_field_out2.tex
    DOC/CODE/grassmann.tex
    DOC/CODE/grassmann_out.tex
    DOC/CODE/johnson.tex
    DOC/CODE/johnson_out.tex
    DOC/CODE/list_of_directories.tex
    DOC/CODE/list_of_files.tex
    DOC/CODE/makefile
    DOC/CODE/paley.tex
    DOC/CODE/paley_out.tex
    DOC/CODE/projective_space.tex
    DOC/CODE/projective_space2.tex
    DOC/CODE/projective_space2_out.tex
    DOC/CODE/projective_space_out.tex
    DOC/CODE/puzzle.tex
    DOC/CODE/puzzle25_compressed.tex
    DOC/CODE/puzzle_out.tex
    DOC/CODE/puzzle_out_edited.tex
    DOC/CODE/sarnak.tex
    DOC/CODE/sarnak_out.tex
    DOC/CODE/schlaefli.tex
    DOC/CODE/schlaefli_out.tex
    DOC/CODE/sol25.tex
    DOC/CODE/winnie_li.tex
    DOC/CODE/winnie_li_out.tex
    DOC/CODE/~dlx.tex
    DOC/CODE/~sol25.tex
    DOC/GRAPHICS/all_k_subsets_5_2.tex
    DOC/GRAPHICS/all_k_subsets_7_3.tex
    DOC/GRAPHICS/BLT_11_tree.png
    DOC/GRAPHICS/checkerboard_puzzle.png
    DOC/GRAPHICS/checkerboard_solution.png
    DOC/GRAPHICS/graph_4_3_0.png
    DOC/GRAPHICS/graph_4_3_1.png
    DOC/GRAPHICS/graph_4_3_2.png
    DOC/GRAPHICS/graph_4_poset_full_lvl_6.tex
    DOC/GRAPHICS/graph_4_poset_lvl_6.tex
    DOC/GRAPHICS/graph_6_r2_poset_lvl_6.tex
    DOC/GRAPHICS/graph_6_r2_tree_lvl_6.tex
    DOC/GRAPHICS/graph_6_r3_poset_lvl_9.tex
    DOC/GRAPHICS/graph_6_r3_tree_lvl_9.tex
    DOC/GRAPHICS/graph_8_r3_0.png
    DOC/GRAPHICS/graph_8_r3_1.png
    DOC/GRAPHICS/graph_8_r3_2.png
    DOC/GRAPHICS/graph_8_r3_3.png
    DOC/GRAPHICS/graph_8_r3_4.png
    DOC/GRAPHICS/graph_8_r3_5.png
    DOC/GRAPHICS/grassmann_graph_4_2_2_3_on_circle.tex
    DOC/GRAPHICS/Hamming.tex
    DOC/GRAPHICS/hyperoval_16_tree.png
    DOC/GRAPHICS/Johnson_5_2_0_on_circle.tex
    DOC/GRAPHICS/Johnson_7_3_1_on_circle.tex
    DOC/GRAPHICS/Monomial_8_2_poset_lvl_4.tex
    DOC/GRAPHICS/Paley_graph_13_on_circle.tex
    DOC/GRAPHICS/petersen.png
    DOC/GRAPHICS/petersen_tree.png
    DOC/GRAPHICS/puzzle25_search.tex
    DOC/GRAPHICS/schlaefli_4_on_circle.tex
    DOC/GRAPHICS/tournament_4_0.png
    DOC/GRAPHICS/tournament_4_1.png
    DOC/GRAPHICS/tournament_4_2.png
    DOC/GRAPHICS/tournament_4_3.png
    DOC/GRAPHICS/WL_16_2.tex
    DOC/GRAPHICS/WL_25_2.tex
    DOC/GRAPHICS/x.log
    DOC/GRAPHICS/X_29_5.tex
    DOC/GRAPHICS/X_29_5_one.tex
    DOC/algorithm.tex
    DOC/appendix.tex
    DOC/blt.tex
    DOC/blt2.tex
    DOC/classification_problems.tex
    DOC/contributions.tex
    DOC/determine_conic.tex
    DOC/examples.tex
    DOC/finite_fields.tex
    DOC/frontmatter.tex
    DOC/fullpage.sty
    DOC/g.aux
    DOC/getting_started.tex
    DOC/graphs.tex
    DOC/grassmann.tex
    DOC/h.aux
    DOC/hyperoval2.tex
    DOC/hyperovals.tex
    DOC/induction.tex
    DOC/installation.tex
    DOC/introduction.tex
    DOC/johnson.tex
    DOC/modeling.tex
    DOC/orbiter.aux
    DOC/orbiter.bbl
    DOC/orbiter.bib
    DOC/orbiter.blg
    DOC/orbiter.log
    DOC/orbiter.pdf
    DOC/orbiter.tex
    DOC/paley.tex
    DOC/projective_space.tex
    DOC/puzzle.tex
    DOC/sarnak.tex
    DOC/schlaefli.tex
    DOC/theory.tex
    DOC/unused.tex
    DOC/winnie_li.tex
    DOC/x.log
    RUN/ARC/19/makefile
    RUN/AWSS/makefile
    RUN/BLT/13/makefile
    RUN/BLT/makefile
    RUN/CODES/2/makefile
    RUN/CODES/4/makefile
    RUN/CODES/makefile
    RUN/GRAPH/CUBIC6/makefile
    RUN/GRAPH/G4/a
    RUN/GRAPH/G4/makefile
    RUN/GRAPH/G5/a
    RUN/GRAPH/G5/makefile
    RUN/GRAPH/G5/x.log
    RUN/GRAPH/PETERSEN/makefile
    RUN/GRAPH/T4/makefile
    RUN/GRAPH/makefile
    RUN/HYPEROVAL/16/makefile
    RUN/HYPEROVAL/32/makefile
    RUN/HYPEROVAL/makefile
    RUN/makefile
    SRC/APPS/ARCS/arc_generator.C
    SRC/APPS/ARCS/arcs.h
    SRC/APPS/ARCS/arcs_main.C
    SRC/APPS/ARCS/test_hyperoval.C
    SRC/APPS/BLT/blt.h
    SRC/APPS/BLT/blt_main.C
    SRC/APPS/BLT/blt_set.C
    SRC/APPS/BLT/blt_set2.C
    SRC/APPS/CODES/code_generator.C
    SRC/APPS/CODES/codes.C
    SRC/APPS/CODES/codes.h
    SRC/APPS/COMBINATORICS/all_k_subsets.C
    SRC/APPS/COMBINATORICS/alphabet.C
    SRC/APPS/COMBINATORICS/alphabet2.C
    SRC/APPS/COMBINATORICS/burnside.C
    SRC/APPS/COMBINATORICS/cayley.C
    SRC/APPS/COMBINATORICS/cayley_sym_n.C
    SRC/APPS/COMBINATORICS/change_1_dollar.C
    SRC/APPS/COMBINATORICS/complete_graph.C
    SRC/APPS/COMBINATORICS/conic.C
    SRC/APPS/COMBINATORICS/conjugacy_classes_sym_n.C
    SRC/APPS/COMBINATORICS/design.C
    SRC/APPS/COMBINATORICS/fibonacci.C
    SRC/APPS/COMBINATORICS/field.C
    SRC/APPS/COMBINATORICS/grassmann.C
    SRC/APPS/COMBINATORICS/group_ring.C
    SRC/APPS/COMBINATORICS/had.C
    SRC/APPS/COMBINATORICS/hadamard.C
    SRC/APPS/COMBINATORICS/hamming.C
    SRC/APPS/COMBINATORICS/johnson.C
    SRC/APPS/COMBINATORICS/johnson_table.C
    SRC/APPS/COMBINATORICS/lehmer.c
    SRC/APPS/COMBINATORICS/matrix_rank.C
    SRC/APPS/COMBINATORICS/nondecreasing.C
    SRC/APPS/COMBINATORICS/orthogonal.C
    SRC/APPS/COMBINATORICS/paley.C
    SRC/APPS/COMBINATORICS/partitions.C
    SRC/APPS/COMBINATORICS/pentomino_5x5.C
    SRC/APPS/COMBINATORICS/problem11.C
    SRC/APPS/COMBINATORICS/puzzle.C
    SRC/APPS/COMBINATORICS/random.C
    SRC/APPS/COMBINATORICS/sarnak.C
    SRC/APPS/COMBINATORICS/schlaefli.C
    SRC/APPS/COMBINATORICS/sequences.C
    SRC/APPS/COMBINATORICS/shrikhande.C
    SRC/APPS/COMBINATORICS/srg.C
    SRC/APPS/COMBINATORICS/subsets.C
    SRC/APPS/COMBINATORICS/test.C
    SRC/APPS/COMBINATORICS/test2.C
    SRC/APPS/COMBINATORICS/test3.C
    SRC/APPS/COMBINATORICS/test4.C
    SRC/APPS/COMBINATORICS/unrank.C
    SRC/APPS/COMBINATORICS/winnie_li.C
    SRC/APPS/GRAPH/graph.C
    SRC/APPS/GRAPH/graph.h
    SRC/APPS/GRAPH/graph_generator.C
    SRC/APPS/REGULAR_LS/regular_ls.C
    SRC/APPS/REGULAR_LS/regular_ls.h
    SRC/APPS/REGULAR_LS/regular_ls_generator.C
    SRC/APPS/REGULAR_LS/transpose.C
    SRC/APPS/TOOLS/all_cliques.C
    SRC/APPS/TOOLS/all_cycles.C
    SRC/APPS/TOOLS/all_rainbow_cliques.C
    SRC/APPS/TOOLS/dlx.C
    SRC/APPS/TOOLS/draw_colored_graph.C
    SRC/APPS/TOOLS/layered_graph_main.C
    SRC/APPS/TOOLS/plot_decomposition_matrix.C
    SRC/APPS/TOOLS/scheduler.C
    SRC/APPS/TOOLS/solve_diophant.C
    SRC/APPS/TOOLS/treedraw.C
    SRC/APPS/TRANSLATION_PLANE/extending.C
    SRC/APPS/TRANSLATION_PLANE/translation_plane.h
    SRC/APPS/TRANSLATION_PLANE/translation_plane_main.C
    SRC/LIB/ACTION/action.C
    SRC/LIB/ACTION/action.h
    SRC/LIB/ACTION/action_by_conjugation.C
    SRC/LIB/ACTION/action_by_representation.C
    SRC/LIB/ACTION/action_by_restriction.C
    SRC/LIB/ACTION/action_by_right_multiplication.C
    SRC/LIB/ACTION/action_by_subfield_structure.C
    SRC/LIB/ACTION/action_cb.C
    SRC/LIB/ACTION/action_global.C
    SRC/LIB/ACTION/action_induce.C
    SRC/LIB/ACTION/action_init.C
    SRC/LIB/ACTION/action_on_andre.C
    SRC/LIB/ACTION/action_on_bricks.C
    SRC/LIB/ACTION/action_on_cosets.C
    SRC/LIB/ACTION/action_on_determinant.C
    SRC/LIB/ACTION/action_on_factor_space.C
    SRC/LIB/ACTION/action_on_grassmannian.C
    SRC/LIB/ACTION/action_on_k_subsets.C
    SRC/LIB/ACTION/action_on_orthogonal.C
    SRC/LIB/ACTION/action_on_sets.C
    SRC/LIB/ACTION/action_on_spread_set.C
    SRC/LIB/ACTION/action_on_wedge_product.C
    SRC/LIB/ACTION/backtrack.C
    SRC/LIB/ACTION/desarguesian_spread.C
    SRC/LIB/ACTION/group.C
    SRC/LIB/ACTION/interface.C
    SRC/LIB/ACTION/interface_matrix_group.C
    SRC/LIB/ACTION/interface_perm_group.C
    SRC/LIB/ACTION/linear_group.C
    SRC/LIB/ACTION/linear_group_description.C
    SRC/LIB/ACTION/matrix_group.C
    SRC/LIB/ACTION/page_storage.C
    SRC/LIB/ACTION/perm_group.C
    SRC/LIB/ACTION/product_action.C
    SRC/LIB/ACTION/schreier.C
    SRC/LIB/ACTION/schreier_sims.C
    SRC/LIB/ACTION/schreier_vector.C
    SRC/LIB/ACTION/sims.C
    SRC/LIB/ACTION/sims2.C
    SRC/LIB/ACTION/sims_global.C
    SRC/LIB/ACTION/strong_generators.C
    SRC/LIB/ACTION/strong_generators_groups.C
    SRC/LIB/ACTION/union_find.C
    SRC/LIB/ACTION/union_find_on_k_subsets.C
    SRC/LIB/ACTION/vector_ge.C
    SRC/LIB/DISCRETA/base.C
    SRC/LIB/DISCRETA/bitmatrix.C
    SRC/LIB/DISCRETA/bt_key.C
    SRC/LIB/DISCRETA/btree.C
    SRC/LIB/DISCRETA/database.C
    SRC/LIB/DISCRETA/design.C
    SRC/LIB/DISCRETA/design_parameter.C
    SRC/LIB/DISCRETA/design_parameter_source.C
    SRC/LIB/DISCRETA/discreta.h
    SRC/LIB/DISCRETA/discreta_global.C
    SRC/LIB/DISCRETA/domain.C
    SRC/LIB/DISCRETA/geometry.C
    SRC/LIB/DISCRETA/global.C
    SRC/LIB/DISCRETA/group_selection.C
    SRC/LIB/DISCRETA/hollerith.C
    SRC/LIB/DISCRETA/integer.C
    SRC/LIB/DISCRETA/longinteger.C
    SRC/LIB/DISCRETA/matrix.C
    SRC/LIB/DISCRETA/memory.C
    SRC/LIB/DISCRETA/number_partition.C
    SRC/LIB/DISCRETA/page_table.C
    SRC/LIB/DISCRETA/perm_group_gens.C
    SRC/LIB/DISCRETA/permutation.C
    SRC/LIB/DISCRETA/solid.C
    SRC/LIB/DISCRETA/unipoly.C
    SRC/LIB/DISCRETA/vector.C
    SRC/LIB/GALOIS/a_domain.C
    SRC/LIB/GALOIS/andre_construction.C
    SRC/LIB/GALOIS/andre_construction_line_element.C
    SRC/LIB/GALOIS/andre_construction_point_element.C
    SRC/LIB/GALOIS/brick_domain.C
    SRC/LIB/GALOIS/buekenhout_metz.C
    SRC/LIB/GALOIS/classify.C
    SRC/LIB/GALOIS/clique_finder.C
    SRC/LIB/GALOIS/colored_graph.C
    SRC/LIB/GALOIS/combinatorics.C
    SRC/LIB/GALOIS/data.C
    SRC/LIB/GALOIS/data_BLT.C
    SRC/LIB/GALOIS/data_BLT_old.C
    SRC/LIB/GALOIS/data_DH.C
    SRC/LIB/GALOIS/data_file.C
    SRC/LIB/GALOIS/data_hyperovals.C
    SRC/LIB/GALOIS/data_packings_PG_3_3.C
    SRC/LIB/GALOIS/data_TP.C
    SRC/LIB/GALOIS/decomposition.C
    SRC/LIB/GALOIS/diophant.C
    SRC/LIB/GALOIS/dlx.C
    SRC/LIB/GALOIS/draw.C
    SRC/LIB/GALOIS/fancy_set.C
    SRC/LIB/GALOIS/file_output.C
    SRC/LIB/GALOIS/finite_field.C
    SRC/LIB/GALOIS/finite_field_linear_algebra.C
    SRC/LIB/GALOIS/finite_field_representations.C
    SRC/LIB/GALOIS/finite_field_tables.C
    SRC/LIB/GALOIS/finite_ring.C
    SRC/LIB/GALOIS/galois.h
    SRC/LIB/GALOIS/galois_global.C
    SRC/LIB/GALOIS/geometric_object.C
    SRC/LIB/GALOIS/geometric_operations.C
    SRC/LIB/GALOIS/gl_classes.C
    SRC/LIB/GALOIS/graph_layer.C
    SRC/LIB/GALOIS/graph_node.C
    SRC/LIB/GALOIS/grassmann.C
    SRC/LIB/GALOIS/grassmann_embedded.C
    SRC/LIB/GALOIS/hermitian.C
    SRC/LIB/GALOIS/hjelmslev.C
    SRC/LIB/GALOIS/incidence_structure.C
    SRC/LIB/GALOIS/INT_matrix.C
    SRC/LIB/GALOIS/INT_vector.C
    SRC/LIB/GALOIS/klein_correspondence.C
    SRC/LIB/GALOIS/layered_graph.C
    SRC/LIB/GALOIS/layered_graph_draw_options.C
    SRC/LIB/GALOIS/longinteger_domain.C
    SRC/LIB/GALOIS/longinteger_object.C
    SRC/LIB/GALOIS/memory.C
    SRC/LIB/GALOIS/memory_object.C
    SRC/LIB/GALOIS/mindist.C
    SRC/LIB/GALOIS/mp_graphics.C
    SRC/LIB/GALOIS/naugraph.c
    SRC/LIB/GALOIS/nautil.c
    SRC/LIB/GALOIS/nauty.c
    SRC/LIB/GALOIS/nauty.h
    SRC/LIB/GALOIS/nauty_interface.C
    SRC/LIB/GALOIS/norm_tables.C
    SRC/LIB/GALOIS/null_polarity_generator.C
    SRC/LIB/GALOIS/number_theory.C
    SRC/LIB/GALOIS/orthogonal.C
    SRC/LIB/GALOIS/orthogonal_points.C
    SRC/LIB/GALOIS/partitionstack.C
    SRC/LIB/GALOIS/plot.C
    SRC/LIB/GALOIS/projective.C
    SRC/LIB/GALOIS/projective_space.C
    SRC/LIB/GALOIS/rainbow_cliques.C
    SRC/LIB/GALOIS/rank_checker.C
    SRC/LIB/GALOIS/set_of_sets.C
    SRC/LIB/GALOIS/sorting.C
    SRC/LIB/GALOIS/spreadsheet.C
    SRC/LIB/GALOIS/subfield_structure.C
    SRC/LIB/GALOIS/super_fast_hash.C
    SRC/LIB/GALOIS/tensor.C
    SRC/LIB/GALOIS/tree.C
    SRC/LIB/GALOIS/tree_node.C
    SRC/LIB/GALOIS/unipoly.C
    SRC/LIB/GALOIS/unusual.C
    SRC/LIB/GALOIS/util.C
    SRC/LIB/GALOIS/vector_hashing.C
    SRC/LIB/INCIDENCE/dynamic_memory.C
    SRC/LIB/INCIDENCE/geo_parameter.C
    SRC/LIB/INCIDENCE/geometric_tests.C
    SRC/LIB/INCIDENCE/inc_gen_global.C
    SRC/LIB/INCIDENCE/incidence.h
    SRC/LIB/INCIDENCE/incidence_global.C
    SRC/LIB/INCIDENCE/mckay.C
    SRC/LIB/INCIDENCE/packing.C
    SRC/LIB/INCIDENCE/point_line.C
    SRC/LIB/INCIDENCE/refine_3design.C
    SRC/LIB/INCIDENCE/refine_columns.C
    SRC/LIB/INCIDENCE/refine_rows.C
    SRC/LIB/INCIDENCE/tdo_data.C
    SRC/LIB/INCIDENCE/tdo_scheme.C
    SRC/LIB/SNAKES_AND_LADDERS/compute_stabilizer.C
    SRC/LIB/SNAKES_AND_LADDERS/extension.C
    SRC/LIB/SNAKES_AND_LADDERS/generator.C
    SRC/LIB/SNAKES_AND_LADDERS/generator_classify.C
    SRC/LIB/SNAKES_AND_LADDERS/generator_combinatorics.C
    SRC/LIB/SNAKES_AND_LADDERS/generator_draw.C
    SRC/LIB/SNAKES_AND_LADDERS/generator_init.C
    SRC/LIB/SNAKES_AND_LADDERS/generator_io.C
    SRC/LIB/SNAKES_AND_LADDERS/generator_trace.C
    SRC/LIB/SNAKES_AND_LADDERS/oracle.C
    SRC/LIB/SNAKES_AND_LADDERS/oracle_downstep.C
    SRC/LIB/SNAKES_AND_LADDERS/oracle_downstep_subspace_action.C
    SRC/LIB/SNAKES_AND_LADDERS/oracle_io.C
    SRC/LIB/SNAKES_AND_LADDERS/oracle_upstep.C
    SRC/LIB/SNAKES_AND_LADDERS/oracle_upstep_subspace_action.C
    SRC/LIB/SNAKES_AND_LADDERS/recognize.C
    SRC/LIB/SNAKES_AND_LADDERS/set_stabilizer_compute.C
    SRC/LIB/SNAKES_AND_LADDERS/snakes_and_ladders_global.C
    SRC/LIB/SNAKES_AND_LADDERS/snakesandladders.h
    SRC/LIB/SNAKES_AND_LADDERS/upstep_work.C
    SRC/LIB/SNAKES_AND_LADDERS/upstep_work_subspace_action.C
    SRC/LIB/SNAKES_AND_LADDERS/upstep_work_trace.C
    SRC/LIB/TOP_LEVEL/analyze_group.C
    SRC/LIB/TOP_LEVEL/choose_points_or_lines.C
    SRC/LIB/TOP_LEVEL/decomposition.C
    SRC/LIB/TOP_LEVEL/elliptic_curve.C
    SRC/LIB/TOP_LEVEL/exact_cover.C
    SRC/LIB/TOP_LEVEL/exact_cover_arguments.C
    SRC/LIB/TOP_LEVEL/extra.C
    SRC/LIB/TOP_LEVEL/factor_group.C
    SRC/LIB/TOP_LEVEL/incidence_structure.C
    SRC/LIB/TOP_LEVEL/isomorph.C
    SRC/LIB/TOP_LEVEL/isomorph_arguments.C
    SRC/LIB/TOP_LEVEL/isomorph_database.C
    SRC/LIB/TOP_LEVEL/isomorph_files.C
    SRC/LIB/TOP_LEVEL/isomorph_global.C
    SRC/LIB/TOP_LEVEL/isomorph_testing.C
    SRC/LIB/TOP_LEVEL/isomorph_trace.C
    SRC/LIB/TOP_LEVEL/knarr.C
    SRC/LIB/TOP_LEVEL/orbit_of_sets.C
    SRC/LIB/TOP_LEVEL/orbit_of_subspaces.C
    SRC/LIB/TOP_LEVEL/orbit_rep.C
    SRC/LIB/TOP_LEVEL/polar.C
    SRC/LIB/TOP_LEVEL/projective_space.C
    SRC/LIB/TOP_LEVEL/recoordinatize.C
    SRC/LIB/TOP_LEVEL/representatives.C
    SRC/LIB/TOP_LEVEL/search_blocking_set.C
    SRC/LIB/TOP_LEVEL/singer_cycle.C
    SRC/LIB/TOP_LEVEL/subspace_orbits.C
    SRC/LIB/TOP_LEVEL/top_level.h
    SRC/LIB/TOP_LEVEL/translation_plane.C
    SRC/LIB/TOP_LEVEL/translation_plane2.C
    SRC/LIB/TOP_LEVEL/translation_plane_via_andre_model.C
    SRC/LIB/TOP_LEVEL/w3q.C
    SRC/LIB/TOP_LEVEL/young.C
    SRC/LIB/orbiter.h
    SRC/makefile
    makefile
    README.md)

add_executable(ORBITER ${SOURCE_FILES})